crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__snapshot_last_step_done_label.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).next_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-last-step",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "next-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Done",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
