crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__snapshot_root_inactive.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "inactive",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Tour",
            ),
        ),
        (
            Id,
            String(
                "tour",
            ),
        ),
    ],
    styles: [],
}
