crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__tour_close_trigger.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: snapshot_attrs(&api.close_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "close-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Close",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
