crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__tour_custom_next.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: snapshot_attrs(&api.next_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "next-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Siguiente",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
