crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__tour_custom_root.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "active",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Tour personalizado",
            ),
        ),
        (
            Id,
            String(
                "tour",
            ),
        ),
    ],
    styles: [],
}
