crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__tour_feedback_overlay.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: snapshot_attrs(&api.overlay_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "overlay",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-z-index",
            ),
            "1600",
        ),
    ],
}
